pylint: show unused imports

--- a/pylint.ini
+++ b/pylint.ini
@@ -49,7 +49,7 @@ load-plugins=
 # R0904 -- Too many public methods
 # R0914 -- Too many local variables
 # I0011 -- Locally disabling
-disable=W0142,W0403,W0703,W0141,W0603,W0613,W0611,C0321,C0111,R0201,R0801,R0912,R0904,I0011
+disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0904,I0011
 
 
 [REPORTS]
