--- a/pylint.ini
+++ b/pylint.ini
@@ -125,10 +125,10 @@ const-rgx=(([A-Z_][A-Z0-9_]*))|([A-Z][a-zA-Z0-9]+Object)$
 class-rgx=[A-Z][a-zA-Z0-9]+$
 
 # Regular expression which should only match correct function names
-function-rgx=[a-z][a-zA-Z0-9_]{1,30}$
+function-rgx=([a-z][a-zA-Z0-9_]{1,30})|(__[a-z][a-zA-Z0-9_]{1,30})$
 
 # Regular expression which should only match correct method names
-method-rgx=([a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30}__)$
+method-rgx=([a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30}__)$
 
 # Regular expression which should only match correct instance attribute names
 attr-rgx=[a-z_][a-z0-9_]{1,30}$
