rtorrent: some fixes

--- a/pylint.ini
+++ b/pylint.ini
@@ -125,7 +125,7 @@ const-rgx=(([A-Z_][A-Z0-9_]*))|([A-Z][a-zA-Z0-9]+Object)$
 class-rgx=[A-Z][a-zA-Z0-9]+$
 
 # Regular expression which should only match correct function names
-function-rgx=([a-z][a-zA-Z0-9_]{1,30})|(__[a-z][a-zA-Z0-9_]{1,30})$
+function-rgx=_{0,2}[a-z][a-zA-Z0-9_]{1,30}$
 
 # Regular expression which should only match correct method names
 method-rgx=([a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30}__)$
