pylint: enabled R0904, disabled R0922

--- a/pylint.ini
+++ b/pylint.ini
@@ -48,8 +48,9 @@ load-plugins=
 # R0912 -- Too many branches
 # R0904 -- Too many public methods
 # R0914 -- Too many local variables
+# R0922 -- Abstract class is only referenced 1 times
 # I0011 -- Locally disabling
-disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0904,I0011
+disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0922,I0011
 
 
 [REPORTS]
