--- a/pylint.ini
+++ b/pylint.ini
@@ -57,7 +57,7 @@ disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0922,
 
 # Set the output format. Available formats are text, parseable, colorized, msvs
 # (visual studio) and html
-output-format=text
+msg-template={msg_id}: {path}:{line}({obj}): {msg}
 
 # Include message's id in output
 include-ids=yes
