--- a/pylint.ini
+++ b/pylint.ini
@@ -166,7 +166,7 @@ max-module-lines=1000
 
 # String used as indentation unit. This is usually " " (4 spaces) or "\t" (1
 # tab).
-indent-string='\t'
+indent-string='    '
 
 
 [MISCELLANEOUS]
