Some pylint fixes

--- a/pylint.ini
+++ b/pylint.ini
@@ -50,7 +50,8 @@ load-plugins=
 # R0914 -- Too many local variables
 # R0922 -- Abstract class is only referenced 1 times
 # I0011 -- Locally disabling
-disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0922,I0011
+# C1001 -- Old-style class defined
+disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0922,I0011,C1001
 
 
 [REPORTS]
@@ -145,7 +146,7 @@ variable-rgx=[a-z_][a-z0-9_]{1,30}$
 inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
 
 # Good variable names which should always be accepted, separated by a comma
-good-names=x,y,z,a,b,ex,Run,_
+good-names=f,x,y,z,a,b,ex,Run,_
 
 # Bad variable names which should always be refused, separated by a comma
 bad-names=foo,bar,baz,toto,tutu,tata
