--- a/pylint.ini
+++ b/pylint.ini
@@ -44,7 +44,7 @@ load-plugins=
 # C0321 -- More than one statement on a single line (like "except Exception : pass")
 # C0111 -- Missing docstring
 # R0201 -- Method could be a function
-# R0801 -- Similar lines (enabled later)
+# R0801 -- Similar lines
 # R0912 -- Too many branches
 # R0904 -- Too many public methods
 # R0914 -- Too many local variables
