--- a/pylint.ini
+++ b/pylint.ini
@@ -130,7 +130,7 @@ class-rgx=[A-Z][a-zA-Z0-9]+$
 function-rgx=_{0,2}[a-z][a-zA-Z0-9_]{1,30}$
 
 # Regular expression which should only match correct method names
-method-rgx=([a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30}__)$
+method-rgx=(_{0,2}[a-z][a-zA-Z0-9]{1,30})|(__[a-z][a-zA-Z0-9]{1,30}__)$
 
 # Regular expression which should only match correct instance attribute names
 attr-rgx=[a-z_][a-z0-9_]{1,30}$
