pylint: disabled some messages

--- a/pylint.ini
+++ b/pylint.ini
@@ -51,7 +51,9 @@ load-plugins=
 # R0922 -- Abstract class is only referenced 1 times
 # I0011 -- Locally disabling
 # C1001 -- Old-style class defined
-disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0922,I0011,C1001
+# C0326 -- No space allowed before
+# C0325 -- Unnecessary parens after 'return' keyword
+disable=W0142,W0403,W0703,W0141,W0603,W0613,C0321,C0111,R0201,R0801,R0912,R0922,I0011,C1001,C0326,C0325
 
 
 [REPORTS]
