--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,13 @@ commands = flake8 setup.py rtlib
 deps =
 	flake8
 	flake8-double-quotes
+	transmissionrpc
 
 [testenv:pylint]
 commands = pylint --output-format=colorized --report=no setup.py rtlib
 deps =
 	pylint
+	transmissionrpc
 
 [flake8]
 max-line-length = 130
