Own socks handler

--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,14 @@ deps =
 	flake8
 	flake8-double-quotes
 	transmissionrpc
+	PySocks
 
 [testenv:pylint]
 commands = pylint --output-format=colorized --report=no setup.py rtlib
 deps =
 	pylint
 	transmissionrpc
+	PySocks
 
 [flake8]
 max-line-length = 130
