pylint and flake8 fixes

--- a/tox.ini
+++ b/tox.ini
@@ -23,4 +23,5 @@ max-line-length = 130
 # E241 -- multiple spaces after ':'
 # E272 -- multiple spaces before keyword
 # E221 -- multiple spaces before operator
-ignore=F401,F811,E241,E272,E221
+# W503 -- line break before binary operator
+ignore=F401,F811,E241,E272,E221,W503
