--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = flake8, pylint
 
 [testenv:flake8]
-commands = flake8 setup.py rtlib
+commands = flake8 setup.py emlib
 deps =
 	flake8
 	flake8-double-quotes
@@ -10,7 +10,7 @@ deps =
 	PySocks
 
 [testenv:pylint]
-commands = pylint --output-format=colorized --report=no setup.py rtlib
+commands = pylint --output-format=colorized --report=no setup.py emlib
 deps =
 	pylint
 	transmissionrpc
