Temporary crutch for broken pylint on 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = flake8, pylint
 
 [testenv:flake8]
+basepython = python3.4
 commands = flake8 setup.py emonoda
 deps =
 	flake8
@@ -9,6 +10,7 @@ deps =
 	transmissionrpc
 
 [testenv:pylint]
+basepython = python3.4
 commands = pylint --output-format=colorized --report=no setup.py emonoda
 deps =
 	pylint
