--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,6 @@
 envlist = flake8, pylint
 
 [testenv:flake8]
-basepython = python3.4
 commands = flake8 setup.py emonoda
 deps =
 	flake8
@@ -10,8 +9,7 @@ deps =
 	transmissionrpc
 
 [testenv:pylint]
-basepython = python3.4
-commands = pylint --output-format=colorized --report=no setup.py emonoda
+commands = pylint --output-format=colorized --reports=no setup.py emonoda
 deps =
 	pylint
 	transmissionrpc
