--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = flake8, pylint
+#envlist = flake8, pylint
+envlist = flake8
 
 [testenv:flake8]
 commands = flake8 setup.py emonoda
