--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-#envlist = flake8, pylint
-envlist = flake8
+envlist = flake8, pylint
 
 [testenv:flake8]
 commands = flake8 setup.py emonoda
