--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist = flake8, pylint
+envlist = flake8, pylint, mypy
+
+[testenv]
+basepython = python3.6
 
 [testenv:flake8]
 commands = flake8 setup.py emonoda
@@ -12,6 +15,12 @@ deps =
 commands = pylint --output-format=colorized --reports=no setup.py emonoda
 deps =
 	pylint
+	transmissionrpc
+
+[testenv:mypy]
+commands = mypy emonoda
+deps =
+	mypy
 	transmissionrpc
 
 [flake8]
