moving to bencoder.pyx to speed up decoding process

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-/pkg-root.arch
-/pkg
-/src
-/build
-/dist
-/emonoda.egg-info
+/pkg-root.arch/
+/pkg/
+/src/
+/build/
+/dist/
+/site/
+/emonoda.egg-info/
+/emonoda/thirdparty/bencoder.c
+/emonoda/thirdparty/bencoder.*.so
 /.tox/
 /.mypy_cache/
 /emonoda-*.tar.gz
 *.pyc
 *.swp
-site/
