--- a/tox.ini
+++ b/tox.ini
@@ -7,19 +7,24 @@ basepython = python3.6
 [testenv:flake8]
 commands = flake8 setup.py emonoda
 deps =
+	Cython
 	flake8
 	flake8-double-quotes
 	transmissionrpc
 
 [testenv:pylint]
-commands = pylint --output-format=colorized --reports=no setup.py emonoda
+commands =
+	python setup.py build_ext --inplace
+	pylint --output-format=colorized --reports=no setup.py emonoda
 deps =
+	Cython
 	pylint
 	transmissionrpc
 
 [testenv:mypy]
 commands = mypy emonoda
 deps =
+	Cython
 	mypy
 	transmissionrpc
 
