--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pylint, mypy
+envlist = flake8, pylint, mypy, vulture
 
 [testenv]
 basepython = python3.6
@@ -18,7 +18,8 @@ commands =
 	pylint --output-format=colorized --reports=no setup.py emonoda
 deps =
 	Cython
-	pylint
+	git+git://github.com/PyCQA/astroid@master#egg=astroid
+	git+git://github.com/PyCQA/pylint@master#egg=pylint
 	transmissionrpc
 
 [testenv:mypy]
@@ -26,6 +27,13 @@ commands = mypy emonoda
 deps =
 	Cython
 	mypy
+	transmissionrpc
+
+[testenv:vulture]
+commands = vulture --exclude emonoda/thirdparty emonoda
+deps =
+	Cython
+	vulture
 	transmissionrpc
 
 [flake8]
