--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
     - "3.6"
-install: "pip install Cython tox"
+install:
+    - sudo apt-get --yes install git
+    - pip install Cython tox
 script: tox
-sudo: false
+sudo: true
