--- a/tox.ini
+++ b/tox.ini
@@ -23,14 +23,14 @@ deps =
 	transmissionrpc
 
 [testenv:mypy]
-commands = mypy emonoda
+commands = mypy setup.py emonoda
 deps =
 	Cython
 	mypy
 	transmissionrpc
 
 [testenv:vulture]
-commands = vulture --exclude emonoda/thirdparty emonoda
+commands = vulture --exclude emonoda/thirdparty setup.py emonoda
 deps =
 	Cython
 	vulture
