--- a/tox.ini
+++ b/tox.ini
@@ -43,5 +43,6 @@ max-line-length = 140
 # E241 -- multiple spaces after ':'
 # E272 -- multiple spaces before keyword
 # E221 -- multiple spaces before operator
+# E252 -- missing whitespace around parameter equals
 # W503 -- line break before binary operator
-ignore=F401,F811,E241,E272,E221,W503
+ignore=F401,F811,E241,E272,E221,E252,W503
