--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,6 +11,6 @@ search = version="{current_version}"
 replace = version="{new_version}"
 
 [bumpversion:file:PKGBUILD]
-search = pkgver="{current_version}"
-replace = pkgver="{new_version}"
+search = pkgver={current_version}
+replace = pkgver={new_version}
 
