--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,7 @@ commands =
 	pylint --output-format=colorized --reports=no setup.py emonoda
 deps =
 	Cython
-	git+git://github.com/PyCQA/astroid@master#egg=astroid
-	git+git://github.com/PyCQA/pylint@master#egg=pylint
+	pylint
 	transmissionrpc
 
 [testenv:mypy]
