--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = flake8, pylint, mypy, vulture
 
 [testenv]
-basepython = python3.9
+basepython = python3.10
 
 [testenv:flake8]
 commands = flake8 setup.py emonoda
@@ -27,6 +27,10 @@ deps =
 	Cython
 	mypy
 	transmissionrpc
+	types-chardet
+	types-pytz
+	types-python-dateutil
+	types-PyYAML
 
 [testenv:vulture]
 commands = vulture --exclude emonoda/thirdparty setup.py emonoda
