--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,11 @@ envlist = flake8, pylint, mypy, vulture
 basepython = python3.10
 
 [testenv:flake8]
-commands = flake8 setup.py emonoda
+commands = flake8 --config=flake8.ini setup.py emonoda
 deps =
 	Cython
-	flake8
-	flake8-double-quotes
+	flake8==5.0.4
+	flake8-quotes
 	transmissionrpc
 
 [testenv:pylint]
