--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist = flake8, pylint, mypy, vulture
+skipsdist = true
 
 [testenv]
-basepython = python3.10
+basepython = python3.11
 
 [testenv:flake8]
 commands = flake8 --config=flake8.ini setup.py emonoda
@@ -11,6 +12,7 @@ deps =
 	flake8==5.0.4
 	flake8-quotes
 	transmissionrpc
+	-rrequirements.txt
 
 [testenv:pylint]
 commands =
@@ -20,6 +22,7 @@ deps =
 	Cython
 	pylint
 	transmissionrpc
+	-rrequirements.txt
 
 [testenv:mypy]
 commands = mypy setup.py emonoda
@@ -31,6 +34,7 @@ deps =
 	types-pytz
 	types-python-dateutil
 	types-PyYAML
+	-rrequirements.txt
 
 [testenv:vulture]
 commands = vulture --exclude emonoda/thirdparty setup.py emonoda
@@ -38,6 +42,7 @@ deps =
 	Cython
 	vulture
 	transmissionrpc
+	-rrequirements.txt
 
 [flake8]
 max-line-length = 140
