--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,13 @@ envlist = flake8, pylint, mypy, vulture
 skipsdist = true
 
 [testenv]
-basepython = python3.11
+basepython = python3.12
 
 [testenv:flake8]
 commands = flake8 --config=flake8.ini setup.py emonoda
 deps =
 	Cython
-	flake8==5.0.4
+	flake8
 	flake8-quotes
 	transmissionrpc
 	-rrequirements.txt
@@ -22,6 +22,7 @@ deps =
 	Cython
 	pylint
 	transmissionrpc
+	setuptools
 	-rrequirements.txt
 
 [testenv:mypy]
